@YELP_HELP_RULES@
 
HELP_ID = pluma
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = \
	figures/pluma_format_bold.png			\
	figures/pluma_format_italic.png			\
	figures/pluma_format_strikethrough.png		\
	figures/pluma_format_underline.png		\
	figures/pluma_recent_files_menu_icon.png	\
	figures/pluma_window.png	

HELP_LINGUAS = ar bg ca cs da de el es fi fr hu it ja ko oc pt_BR ru sv th uk zh_CN zh_HK zh_TW


-include $(top_srcdir)/git.mk
