@YELP_HELP_RULES@
 
HELP_ID = xedit
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = \
	figures/xedit_format_bold.png			\
	figures/xedit_format_italic.png			\
	figures/xedit_format_strikethrough.png		\
	figures/xedit_format_underline.png		\
	figures/xedit_recent_files_menu_icon.png	\
	figures/xedit_window.png	

HELP_LINGUAS = ar bg ca cs da de el es fi fr hu it ja ko oc pt_BR ru sv th uk zh_CN zh_HK zh_TW


-include $(top_srcdir)/git.mk
