help_sources = [
    'index.docbook',
    'legal.xml'
]

help_media = [
    'figures/xed_format_bold.png',
    'figures/xed_format_italic.png',
    'figures/xed_format_strikethrough.png',
    'figures/xed_format_underline.png',
    'figures/xed_recent_files_menu_icon.png',
    'figures/xed_window.png'
]

gnome.yelp(
    meson.project_name(),
    sources: help_sources,
    media: help_media,
    symlink_media: false
)
