DIST_SUBDIRS =		\
	docinfo 		\
	filebrowser 	\
	modelines 		\
	sort 			\
	spell			\
	taglist			\
	textsize 		\
	time			\
	trailsave

SUBDIRS = 			\
	docinfo 		\
	filebrowser 	\
	modelines 		\
	sort			\
	taglist			\
	textsize 		\
	time			\
	trailsave

if ENABLE_SPELL
SUBDIRS += spell
endif

-include $(top_srcdir)/git.mk
