pluginsdatadir = join_paths(datadir, 'xed', 'plugins')
pluginslibdir = join_paths(libdir, 'xed', 'plugins')

subdir('bracket-complete')
subdir('docinfo')
subdir('filebrowser')
subdir('joinlines')
subdir('modelines')
subdir('open-uri-context-menu')
subdir('pythonconsole')
subdir('sort')
subdir('taglist')
subdir('textsize')
subdir('time')
subdir('trailsave')
subdir('wordcompletion')

if enable_spell
    subdir('spell')
endif
